-------------------
-- Version 1.X.X --
-------------------

ETC separated alpha support
Export animations with custom scale (for retina)

-------------------
-- Version 1.2.0 --
-------------------

Add Yield instructions for wait in coroutines(SwfWaitPlayStopped, SwfWaitRewindPlaying, SwfWaitStopPlaying)
Add unscaled delta time support(for separate animations, groups of animations or for all)
Fix guide type flash layers
Some fixes for reconvert asset problem

-------------------
-- Version 1.1.1 --
-------------------

Add conversion error by shape tween in CS6
Fix life after death (problem about destroying with big lag by frame event)

-------------------
-- Version 1.1.0 --
-------------------

Sequence separator is anchor frame label (not common frame label)
SwfClip access to frame labels (currentLabelCount, GetCurrentFrameLabel)
SwfClip events (OnChangeClipEvent, OnChangeSequenceEvent, OnChangeCurrentFrameEvent)

-------------------
-- Version 1.0.0 --
-------------------

Initial asset store version
Sources to dll
Palette bitmaps support

-------------------
-- Version 0.5.0 --
-------------------

Flash optimizer twicks
Blending modes (except Alpha and Erase)

-------------------
-- Version 0.4.0 --
-------------------

Clip groups
Fix move assets bug
Tint color for clips
Animation API improvements

-------------------
-- Version 0.3.0 --
-------------------

Preview for animation assets and clips
Animation API improvements
Memory optimizations

-------------------
-- Version 0.2.0 --
-------------------

Export optimizations
Export clips with export names

-------------------
-- Version 0.1.0 --
-------------------

Initial alpha version