@@ -154,6 +154,14 @@ namespace FTEditor.Editors {
 			});
 		}
 
+		void DrawGUINotes() {
+			EditorGUILayout.Separator();
+			EditorGUILayout.HelpBox(
+				"Masks of animation may not be displayed correctly in preview window. " + 
+				"Instance animation to the scene, to see how it will look like the animation in the game.",
+				MessageType.Info);
+		}
+
 		// ---------------------------------------------------------------------
 		//
 		// Messages
@@ -171,6 +179,7 @@ namespace FTEditor.Editors {
 			DrawGUISequences();
 			DrawGUISourceAsset();
 			DrawGUIControls();
+			DrawGUINotes();
 			if ( GUI.changed ) {
 				serializedObject.ApplyModifiedProperties();
 			}
