@@ -4,6 +4,7 @@
 
 ETC separated alpha support
 Export animations with custom scale (for retina)
+Added note message about problems of animation in preview
 
 -------------------
 -- Version 1.2.0 --
